--- a/src/css/sass/_todo-form.scss
+++ b/src/css/sass/_todo-form.scss
@@ -5,6 +5,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 50;
     form {
         position: relative;
         // transform: translateY(20%);
